# unn

./: .clang-format  .gitignore  CMakeLists.txt  README.md
all/: CMakeLists.txt
cmake/: unnConfig.cmake.in
examples/: main.cpp
examples/spiral/: CMakeLists.txt
examples/spiral/src/: main.cpp
include/unn/: AdaGrad.hpp  Ada_Grad.hpp  Layer.hpp  Layer_Dense.hpp  Loss.hpp  Loss_CCE.hpp  Optimizer_SGD.hpp  ReLU.hpp  SGD.hpp  Softmax.hpp  Softmax_And_Loss_CCE.hpp
src/: AdaGrad.cpp  Layer_Dense.cpp  Loss_CCE.cpp  Loss_CCE.hpp  Optimizer_SGD.cpp  ReLU.cpp  SGD.cpp  Softmax.cpp
tests/: CMakeLists.txt
tests/package-smoke/: CMakeLists.txt  main.cpp
tests/src/: layer_dense.cpp  smoke.cpp  test_cce.cpp  test_layer_dense.cpp  test_smoke.cpp  test_softmax.cpp  test_softmax_and_cce.cpp
